--- a/header.html
+++ b/header.html
@@ -188,7 +188,7 @@
 
   <!-- Nav right -->
   <nav id="navbar">
-    <a href="'cyber ai.html">Cyber ai</a>
+    <a href="cyber ai.html">Cyber ai</a>
     <div class="dropdown">
       <div class="dropdown-btn">Programs</div>
       <div class="dropdown-content">
