--- a/cyber ai.html
+++ b/cyber ai.html
@@ -293,6 +293,16 @@
         }
     </style>
 </head>
+<div id="site-header"></div>
+<script>
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("site-header").innerHTML = html;
+    });
+</script>
+
+
 <body>
     <div class="chat-container">
 
