--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
     <div class="dropdown">
       <div class="dropdown-btn">Socials</div>
       <div class="dropdown-content">
-        <a href="https://www.instagram.com/dcyberx.1" target="_blank">Instagram</a>
-        <a href="https://github.com/Dcyberx" target="_blank">GitHub</a>
-        <a href="https://discord.gg/FyJYcpaS" target="_blank">CyberTech Discord</a>
-        <a href="mailto:Dcyberx@proton.me">email</a>
+        <a href="https://discord.gg/FyJYcpaS" title="Discord"><i class="fab fa-discord"></i></a>
+                <a href="mailto:Dcyberx@proton.me" title="Email"><i class="fab fa-email"></i></a>
+                <a href="https://www.instagram.com/dcyberx.1" title="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/Dcyberx" title="GitHub"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
