--- a/cyber ai.html
+++ b/cyber ai.html
@@ -30,7 +30,7 @@
         }
         /* ==================== HEADER ==================== */
         .main-header {
-            background: linear-gradient(135deg, #075E54 0%, #128C7E 100%);
+            background: linear-gradient(to right, #075E54 0%, rgba(18, 140, 126, 0) 70%);
             padding: 15px 25px;
             display: flex;
             align-items: center;
@@ -798,7 +798,7 @@ Feel free to have a chat...! 💻✨</div>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #080808; /* Dark background */
+      background-color: #0a0a0a; /* Dark background */
       color: #8ad4ba; /* Light text color */
       margin: 0;
       padding: 20px;
