--- a/cyber ai.html
+++ b/cyber ai.html
@@ -620,7 +620,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="main-header">
+<!---   <header class="main-header">
         <div class="header-avatar">
             <i class="fas fa-robot"></i>
         </div>
@@ -630,7 +630,7 @@
                 <span class="status-dot"></span>
                 CyberTech AI Assistant
             </div>
-        </div>
+        </div>---->
         <div class="header-actions">
            <!----- <button class="header-btn" onclick="askQuestion('Tell me a tech joke')">
                 <i class="fas fa-laugh"></i>
