--- a/cyber ai.html
+++ b/cyber ai.html
@@ -364,6 +364,7 @@
             opacity: 0.5;
             cursor: not-allowed;
         }
+        
         /* ==================== SUBSCRIPTION MODAL ==================== */
         .modal-overlay {
             display: none;
@@ -771,7 +772,15 @@ Feel free to have a chat...! 💻✨</div>
                 </div>
             </div>
             <div class="modal-footer">
-                <p>Questions? Contact <a href="
+            <!-- Your chat container -->
+<div class="chat-container" id="chatContainer">
+    <!-- chat header, messages, input, etc. -->
+</div>
+
+<!-- Include your chat.js -->
+<script src="chat.js"></script>
+
+                
 
 
 
