--- a/playlist.html
+++ b/playlist.html
@@ -140,7 +140,8 @@
     { name: "Ordinary- Alex Warren", src: "assets/audio/ordinary.mp3" },
     { name: "Sunroof- Nicky Youre", src: "assets/audio/sunroof.mp3" },
     { name: "little bit- Sam02", src: "assets/audio/littlebit.mp3" },
-    { name: "akalimu- Bobi", src: "assets/audio/akalimu.mp3" }
+    { name: "akalimu- Bobi", src: "assets/audio/akalimu.mp3" },
+    { name: "come see me - sam02", src: "assets/audio/come see me.mp3"}
   ];
 
   let currentSong = 0;
