--- a/header.html
+++ b/header.html
@@ -245,7 +245,7 @@
         <a href="index.html">Home</a>
         
 
-    <a href="pay.html" class="cta-btn">Donate</a>
+    <a href="recaptcha.html" class="cta-btn">Donate</a>
   </nav>
   
   
