--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       </div>
     </div>
 
-    <a href="pay.html" class="cta-btn">Donate</a>
+    <a href="recaptcha.html" class="cta-btn">Donate</a>
     <div class="theme-toggle" onclick="toggleTheme()">🌙/☀️</div>
   </nav>
 </header>
