--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <header>
   <nav>
     <!-- PNG Logo that links to homepage -->
-    <a href="index" class="logo" aria-label="Homepage">
+    <a href="index.html" class="logo" aria-label="Homepage">
       <img src="cyber.png" alt="Cyber Logo" class="logo-img">
     </a>
   </nav
@@ -193,6 +193,7 @@
     </div>
   
   <nav id="navbar">
+    
     <a href="cyber ai">Cyber ai</a>
     <!-- Programs -->
     <div class="dropdown">
