--- a/pay.html
+++ b/pay.html
@@ -1,6 +1,6 @@
 <div id="site-header"></div>
 <script>
-  fetch("header")
+  fetch("header.html")
     .then(res => res.text())
     .then(html => {
       document.getElementById("site-header").innerHTML = html;
