--- a/playlist.html
+++ b/playlist.html
@@ -109,7 +109,7 @@
   <div id="site-header"></div>
 
   <script>
-    fetch("header")
+    fetch("header.html")
       .then(res => res.text())
       .then(html => document.getElementById("site-header").innerHTML = html);
   </script>
