--- a/cyber ai.html
+++ b/cyber ai.html
@@ -14,11 +14,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-Frame-Options" content="DENY">
-  <meta http-equiv="X-Content-Type-Options" content="nosniff">
-  <meta http-equiv="Access-Control-Allow-Origin" content="*">
-  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
-  <meta http-equiv="X-Content-Security-Policy" content="default-src 'self';">
-  <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
+    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self';">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://trusted-cdn.com; style-src 'self' 'unsafe-inline'; img-src 'self';">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyber Bot - The CyberTech AI</title>
@@ -900,7 +900,7 @@ Feel free to have a chat...! 💻✨</div>
 
 
 <script type="module">
-  import { getBotResponse } from './chatting.html';
+  import { getBotResponse } from './chating.js';
 
   const chatInput = document.getElementById("chatInput");
   const sendBtn = document.getElementById("sendBtn");
