--- a/cyber ai.html
+++ b/cyber ai.html
@@ -900,7 +900,7 @@ Feel free to have a chat...! 💻✨</div>
 
 
 <script type="module">
-  import { getBotResponse } from './Dcyberx/dcyberx.github.io/chat.js';
+  import { getBotResponse } from './chat.js';
 
   const chatInput = document.getElementById("chatInput");
   const sendBtn = document.getElementById("sendBtn");
