--- a/header.html
+++ b/header.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-Frame-Options" content="DENY">
-<meta http-equiv="X-Content-Type-Options" content="nosniff">
-<meta http-equiv="Access-Control-Allow-Origin" content="*">
-<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
-<meta http-equiv="X-Content-Security-Policy" content="default-src 'self';">
-<meta http-equiv="X-XSS-Protection" content="1; mode=block">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
-<title>CyberTech Modern Layout</title>
-<style>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
+    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self';">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <meta 
+      http-equiv="Content-Security-Policy" 
+      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
+    >
+    <title>Dcyberx Nexus Subscription Policy</title>
+    <style>
   :root {
     --bg-dark: #0a0a0a;
     --text-dark: #0fff72;
