--- a/recaptcha.html
+++ b/recaptcha.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-Frame-Options" content="DENY">
-  <meta http-equiv="X-Content-Type-Options" content="nosniff">
-  <meta http-equiv="Access-Control-Allow-Origin" content="*">
-  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
-  <meta http-equiv="X-Content-Security-Policy" content="default-src 'self';">
-  <meta http-equiv="X-XSS-Protection" content="1; mode=block">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
-  <title>CyberTech Subscription Puzzle</title>
-  <style>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
+    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self';">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <meta 
+      http-equiv="Content-Security-Policy" 
+      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
+    >
+    <title>Dcyberx Nexus Subscription Policy</title>
+    <style>
     body { background:#0d0d0d; color:#00ff99; font-family:monospace; padding:20px; }
     h1 { display:flex; align-items:center; gap:10px; }
     .card { background:#111; border:1px solid #00ff99; border-radius:10px; padding:20px; max-width:500px; margin:auto; }
