--- a/cyber ai.html
+++ b/cyber ai.html
@@ -13,11 +13,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-Frame-Options" content="DENY">
+    <!---<meta http-equiv="X-Frame-Options" content="DENY">--->
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
-    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self';">
+    <!--<meta http-equiv="X-Content-Security-Policy" content="default-src 'self';">--->
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta 
