--- a/cyber ai.html
+++ b/cyber ai.html
@@ -716,8 +716,9 @@ Feel free to have a chat...! 💻✨</div>
             <input type="text" class="chat-input" id="chatInput" placeholder="Type a message..." autocomplete="off">
         </div>
         <button class="send-btn" id="sendBtn" title="Send Message">
-            <i class="fas fa-paper-plane"></i>
-        </button>
+  <i class="send-icon">➣</i> 
+</button>
+
     </div>
     <!-- Footer -->
     <footer class="site-footer">
