--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     </div>
 
     <!-- Subscriptions -->
-    <a href="recaptcha">Subscriptions</a>
+    <a href="subscription.html">Subscriptions</a>
 
     <!-- Socials -->
     <div class="dropdown">
