--- a/header.html
+++ b/header.html
@@ -205,7 +205,7 @@
       </div>
     </div>
 
-    <a href="recaptcha.html">Subscriptions</a>
+    <a href="subscription.html">Subscriptions</a>
 
     <div class="dropdown">
       <div class="dropdown-btn">Socials</div>
