--- a/recaptcha.html
+++ b/recaptcha.html
@@ -13,7 +13,7 @@
       http-equiv="Content-Security-Policy" 
       content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
     >
-    <title>Dcyberx Nexus Subscription Policy</title>
+    <title>Recaptcha</title>
     <style>
     body { background:#0d0d0d; color:#00ff99; font-family:monospace; padding:20px; }
     h1 { display:flex; align-items:center; gap:10px; }
