--- a/subscription.html
+++ b/subscription.html
@@ -13,7 +13,7 @@
       http-equiv="Content-Security-Policy" 
       content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
     >
-    <title>Dcyberx Nexus Subscription Policy</title>
+    <title>Subscribe</title>
     <style>
     body {
       background-color: #0d0d0d;
