--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       http-equiv="Content-Security-Policy" 
       content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
     >
-    <title>Dcyberx Nexus Subscription Policy</title>
+    <title>CyberTech</title>
     <style>
   :root {
     --bg-dark: #0a0a0a;
