--- a/motivation.html
+++ b/motivation.html
@@ -13,7 +13,7 @@
       http-equiv="Content-Security-Policy" 
       content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
     >
-    <title>Dcyberx Nexus Subscription Policy</title>
+    <title>Motivation</title>
     <style>
     body {
       background: #000;
