--- a/nexus.html
+++ b/nexus.html
@@ -13,7 +13,7 @@
       http-equiv="Content-Security-Policy" 
       content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
     >
-    <title>Dcyberx Nexus Subscription Policy</title>
+    <title>Nexus Program</title>
     <style>
     /* Container to hold images near the left margin */
     .image-container {
