--- a/cyber ai.html
+++ b/cyber ai.html
@@ -24,7 +24,7 @@
       http-equiv="Content-Security-Policy" 
       content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
     >
-    <title>Cyber ai</title>
+    <title>cyber ai</title>
     <style>
         * {
             margin: 0;
