--- a/pay.html
+++ b/pay.html
@@ -7,3 +7,21 @@
     });
 </script>
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Payment / donations</title>
+    <!---<meta http-equiv="X-Frame-Options" content="DENY">--->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
+    <!--<meta http-equiv="X-Content-Security-Policy" content="default-src 'self';">--->
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <meta 
+      http-equiv="Content-Security-Policy" 
+      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
+    >
+    
+    <style>
