--- a/recaptcha.html
+++ b/recaptcha.html
@@ -65,7 +65,7 @@
 
   // Pick random puzzle
   const puzzle = puzzles[Math.floor(Math.random()*puzzles.length)];
-  document.querySelector("p").innerHTML = `🧩 recaptcha Pick 2 items which go in a <strong>${puzzle.container}</strong>`;
+  document.querySelector("p").innerHTML = `🧩 recaptcha Pick  items which of  a <strong>${puzzle.container}</strong>`;
 
   // Distractors
   const distractors = ["🍎","🐱","🦅","💻","🎧","📦","🔋","🕹️"];
@@ -235,7 +235,7 @@
     base-uri 'self';">
   <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload"> <!-- HSTS -->
   <meta http-equiv="Referrer-Policy" content="no-referrer"> <!-- Referrer Policy -->
-  <title>Secure Website</title>
+  
   <style>
     body {
       font-family: Arial, sans-serif;
