--- a/header.html
+++ b/header.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <!---<meta http-equiv="X-Frame-Options" content="DENY">--->
+    <!-- Meta description for search engines -->
+<meta name="description" content="CyberTech, Dcyberx, softeare engineering, tech enthuist">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
