--- a/index.html
+++ b/index.html
@@ -451,6 +451,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Meta description for search engines -->
+<meta name="description" content="CyberTech, Dcyberx, softeare engineering, tech enthuist">
   <meta http-equiv="X-XSS-Protection" content="1; mode=block"> <!-- Enable XSS Protection -->
   <meta http-equiv="X-Content-Type-Options" content="nosniff"> <!-- Prevent MIME type sniffing -->
   <meta http-equiv="X-Frame-Options" content="DENY"> <!-- Prevent clickjacking -->
