--- a/pay.html
+++ b/pay.html
@@ -14,7 +14,15 @@
     <title>Payment / donations</title>
     <!---<meta http-equiv="X-Frame-Options" content="DENY">--->
     <!-- Meta description for search engines -->
-<meta name="description" content="CyberTech, Dcyberx, softeare engineering, tech enthuist">
+    <meta name="description" content="CyberTech, Dcyberx, softeare engineering, tech enthuist">
+    <!-- Author of the website -->
+    <meta name="author" content="Dcyberx">
+
+    <!-- Open Graph meta tags for social media sharing (Facebook, LinkedIn) -->
+    <meta property="og:title" content="CyberTech">
+    <meta property="og:description" content="Awesome website tech theme">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dcyberx.github.io">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
