--- a/nexus.html
+++ b/nexus.html
@@ -139,7 +139,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Meta description for search engines -->
-<meta name="description" content="CyberTech, Dcyberx, softeare engineering, tech enthuist">
+  <meta name="description" content="CyberTech, Dcyberx, softeare engineering, tech enthuist">
+  <!-- Author of the website -->
+  <meta name="author" content="Dcyberx">
+
+  <!-- Open Graph meta tags for social media sharing (Facebook, LinkedIn) -->
+  <meta property="og:title" content="CyberTech">
+  <meta property="og:description" content="Awesome website tech theme">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://dcyberx.github.io">
   <meta http-equiv="X-XSS-Protection" content="1; mode=block"> <!-- Enable XSS Protection -->
   <meta http-equiv="X-Content-Type-Options" content="nosniff"> <!-- Prevent MIME type sniffing -->
   <meta http-equiv="X-Frame-Options" content="DENY"> <!-- Prevent clickjacking -->
