--- a/recaptcha.html
+++ b/recaptcha.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <!--<meta http-equiv="X-Frame-Options" content="DENY">--->
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <!-- Author of the website -->
+    <meta name="author" content="Dcyberx">
+
+    <!-- Open Graph meta tags for social media sharing (Facebook, LinkedIn) -->
+    <meta property="og:title" content="CyberTech">
+    <meta property="og:description" content="Awesome website tech theme">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dcyberx.github.io">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
     <!--<meta http-equiv="X-Content-Security-Policy" content="default-src 'self';">--->
