--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!--<meta http-equiv="X-Frame-Options" content="DENY">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta description for search engines -->
     <meta name="description" content="CyberTech, Dcyberx, softeare engineering, tech enthuist">
     <!-- Author of the website -->
