--- a/cyber ai.html
+++ b/cyber ai.html
@@ -15,6 +15,7 @@
     <meta charset="UTF-8" />
     <title>Cyber ai</title>
     <!---<meta http-equiv="X-Frame-Options" content="DENY">--->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta description for search engines -->
     <meta name="description" content="CyberTech, Dcyberx, softeare engineering, tech enthuist">
     <!-- Author of the website -->
