--- a/nexus.html
+++ b/nexus.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!--<meta http-equiv="X-Frame-Options" content="DENY">--->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
