--- a/subscription.html
+++ b/subscription.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dcyberx.github.io">
     <!-- Meta description for search engines -->
-    <meta name="description" content="CyberTech, Dcyberx, softeare engineering, tech enthuist">
+    <meta name="description" content="CyberTech, Dcyberx, software engineering, tech enthuist">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
