--- a/motivation.html
+++ b/motivation.html
@@ -86,10 +86,11 @@
     </p>
     <p>
        <p>Never give time to useless things, time is wealth.</p>
+        <p>Talk less, listen more</p>
         <p>Once disrespected, calm down and breathe in and out, even diamond can be coated with mud. </p>
         <p>Always keep low in every situation and environment, value is always valuable and wisdom and wealth are always silent.</p>
         <p>Always respect all people but more listen to actions than the words.</p>
-        <p>Not evry smiling face is happy for you, alwyays ask God for protection.</p>
+        <p>Not every smiling face is happy for you, alwyays ask God for protection.</p>
         <p>If you have enemies, competitors and people who admire you, your doing something successful in life</p>
         <p>Always mind origin, family and friends, also never forget anyone who provided a brick in your success, they are alwyas the pillars you are standing on.</p>
         <p>If you fell valueless or taken valueless, alwyas change position, gold cannot be used as food</p>
